overflow-fix-2

--- a/frontend/css/financial-projections.css
+++ b/frontend/css/financial-projections.css
@@ -8,7 +8,7 @@
   padding: .5%;
 }
 .financials{
-  height:auto;
+  height:1040px;
   width: 100%;
 }
 table, th, td {
